added login sessions & logout link

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,13 @@
 <html>
   <head>
       <title>{{title}}</title>
+      <hr>
   </head>
 <body>
+
+    <div>
+        <a href="/logout">Log Out</a>
+    </div>
 
     {% block content %}
     {% endblock %}
